--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ steps:
   displayName: 'checkout repo'
 
 - script: 
+   cd PLAYWRIGHT
    npm install
    npx playwright install
    npm install dotenv
