Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,4 +18,4 @@ steps:
    npx playwright install
    npm install dotenv
    npx playwright test --project=chromium
-
+  displayName: 'Exceute Playwright tests'
