Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ steps:
   displayName: 'checkout repo'
 
 - script: 
-   pwd
+   cd PLAYWRIGHT
    npm install
    npx playwright install
    npx playwright test
