--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,19 @@
-
 trigger:
-- none
+- main
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
-- checkout: self
-  displayName: 'checkout repo'
-
-- script: 
-   npm install
-   npx playwright install
-   npm install dotenv
-  displayName: 'Install playwright'
-
-- script: 
-   npx playwright test
-  displayName: 'Execute playwright tests'
+- task: NodeTool@0
+  inputs:
+    versionSpec: '18'
+  displayName: 'Install Node.js'
+- script: npm ci
+  displayName: 'npm ci'
+- script: npx playwright install --with-deps
+  displayName: 'Install Playwright browsers'
+- script: npx playwright test
+  displayName: 'Run Playwright tests'
+  env:
+    CI: 'true'
