Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,8 @@ steps:
   displayName: 'npm ci'
 - script: npx playwright install --with-deps
   displayName: 'Install Playwright browsers'
+- script: npm install dotenv
+  displayName: 'Install dotenv'
 - script: npx playwright test
   displayName: 'Run Playwright tests'
   env:
