--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,8 @@ steps:
   condition: succeededOrFailed()
 - task: PublishPipelineArtifact@1
   inputs:
+    script: 
+    mkdir $(System.DefaultWorkingDirectory)/playwright-report
     targetPath: playwright-report
     artifact: playwright-report
     publishLocation: 'pipeline'
