--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,12 @@ steps:
   displayName: 'Run Playwright tests'
   env:
     CI: 'true'
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: playwright-report
+    artifact: playwright-report
+    publishLocation: 'pipeline'
+  condition: succeededOrFailed()
 - task: PublishTestResults@2
   displayName: 'Publish test results'
   inputs:
@@ -29,8 +35,4 @@ steps:
     failTaskOnFailedTests: true
     testRunTitle: 'My End-To-End Tests'
   condition: succeededOrFailed()
-- task: PublishPipelineArtifact@1
-  inputs:
-    artifact: playwright-report
-    publishLocation: 'pipeline'
-  condition: succeededOrFailed()
+
